# autodiffeq

./: CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: cmake.yml  linux.yml  osx.yml
autodiffeq/: CMakeLists.txt
autodiffeq/cuda/: cudaCheckError.cuh  cudaCheckError.h
autodiffeq/linearalgebra/: Array1D.hpp  Array2D.hpp  Array3D.hpp  Array4D.hpp  CMakeLists.txt  GPUArray1D.cuh  GPUArray1D.hpp  GPUArray2D.cuh  GPUArray3D.cuh  GPUArray4D.cuh
autodiffeq/numerics/: ADVar.hpp  ADVarS.hpp  CMakeLists.txt  Complex.hpp
autodiffeq/solver/: ForwardEuler.hpp  GPUSolutionHistory.cuh  ODE.hpp  ODESolver.hpp  RK4.hpp  RungeKutta.hpp  SolutionHistory.hpp  SolverKernels.cuh
cmake/: CompileFlags.cmake  autodiffeqConfig.cmake.in  autodiffeqInstallCMakeConfigFiles.cmake
examples/: CMakeLists.txt  GPUMultimodeNLSE.hpp  MultimodeNLSE.hpp  cuda_example.cu  example1.cpp  nlse.cpp  nlse_gpu.cu
scripts/: S_tensors_2modes.mat  betas.mat  comparison_plot.py  equation_details.pptx  plot.py  plot_mpa.py  sol.txt
test/: CMakeLists.txt
test/linearalgebra/: GPUArray1D_gputest.cu  GPUArray1D_test.cu  GPUArray2D_gputest.cu  GPUArray2D_test.cu  GPUArray3D_gputest.cu  GPUArray4D_gputest.cu
test/numerics/: ADVarS_gputest.cu  ADVarS_test.cpp  ADVar_test.cpp
test/solver/: ForwardEuler_gputest.cu  ForwardEuler_test.cpp  RungeKutta_gputest.cu  RungeKutta_test.cpp
