INCLUDE( ${CMAKE_SOURCE_DIR}/cmake/ForceOutOfSource.cmake ) #This must be the first thing included

# ADD_SUBDIRECTORY( Grid )
# ADD_SUBDIRECTORY( IO )
# ADD_SUBDIRECTORY( LinearAlgebra )
# ADD_SUBDIRECTORY( PDE )
# ADD_SUBDIRECTORY( Reference )
# ADD_SUBDIRECTORY( Solver )
# ADD_SUBDIRECTORY( Utils )
